--- a/vue01.html
+++ b/vue01.html
@@ -9,14 +9,23 @@
     <script src="./node_modules/vue/dist/vue.js"></script>
     <script src="./node_modules/jquery/dist/jquery.js"></script>
 </head>
+<style>
+    /* .red{
+        background-color: red;
+    } */
+    /* .red:hover{
+        background-color: black;
+    } */
+</style>
 
 <body>
     <div id="app">
-        <p v-text="mseege">会被覆盖的内容</p>
+        <p class="red">ni</p>
+        <!-- <p class="red"v-text="mseege" @mouseenter="mouseenter">会被覆盖的内容</p>
         <p>{{mseege}}</p>
         <p v-html="ht"></p>
         <input :value="connt">
-        <button @click="click">+1</button>
+        <button @click="click">+1</button> -->
     </div>
     <script>
         const vm=new Vue({
@@ -29,8 +38,12 @@
             methods:{
                 click(){
                     this.connt+=1
-                }
+                },
             }
+        })
+        $(".red").on('mouseenter',function(e){
+            e.target.style.backgroundColor = 'red'
+            console.log('1')
         })
     </script>
 
